--- a/main.css
+++ b/main.css
@@ -4,49 +4,74 @@
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+}
 
 html,
 body {
   padding: 0;
   margin: 0;
-  height: 100vh; }
+  height: 100vh;
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Open Sans", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   padding: 1rem 1.5rem;
   margin: 0;
   box-sizing: border-box;
-  text-rendering: optimizeLegibility; }
-  body.dark {
-    background-color: #0f2533;
-    color: #f8fafa; }
-  body.light {
-    background-color: #f6f8fb;
-    color: #0f2533; }
-    body.light .shortcut:after {
-      background-color: #e6eaee; }
-    body.light .shortcut__key span,
-    body.light .shortcut__name span {
-      background-color: #f6f8fb; }
-    body.light .no-shortcuts .app-name {
-      color: #7f8ba0; }
-    body.light .user-settings {
-      background-color: #f6f8fb;
-      color: #0f2533; }
-      body.light .user-settings .user-settins-buttons .button:last-of-type {
-        background-color: #0f2533;
-        color: #f6f8fb; }
-    body.light .button {
-      background-color: #f6f8fb;
-      border-color: #dadada; }
-    body.light .cancel:hover {
-      background-color: #e6eaee; }
-    body.light .save-and-relaunch:hover {
-      background-color: #e6eaee; }
-    body.light input#keycode {
-      background-color: white;
-      color: #0f2533; }
+  text-rendering: optimizeLegibility;
+}
+
+body.dark {
+  background-color: #0f2533;
+  color: #f8fafa;
+}
+
+body.light {
+  background-color: #f6f8fb;
+  color: #0f2533;
+}
+
+body.light .shortcut:after {
+  background-color: #e6eaee;
+}
+
+body.light .shortcut__key span,
+body.light .shortcut__name span {
+  background-color: #f6f8fb;
+}
+
+body.light .no-shortcuts .app-name {
+  color: #7f8ba0;
+}
+
+body.light .user-settings {
+  background-color: #f6f8fb;
+  color: #0f2533;
+}
+
+body.light .user-settings .user-settins-buttons .button:last-of-type {
+  background-color: #0f2533;
+  color: #f6f8fb;
+}
+
+body.light .button {
+  background-color: #f6f8fb;
+  border-color: #dadada;
+}
+
+body.light .cancel:hover {
+  background-color: #e6eaee;
+}
+
+body.light .save-and-relaunch:hover {
+  background-color: #e6eaee;
+}
+
+body.light input#keycode {
+  background-color: white;
+  color: #0f2533;
+}
 
 input {
   color: #5f697b;
@@ -57,23 +82,30 @@ input {
   padding: 0 1rem 0 1.8rem;
   margin-top: 1rem;
   width: 100%;
-  font-weight: 300; }
-  input:focus {
-    transition: all 0.2s ease; }
-  input#search {
-    border-radius: 100px;
-    background: white 10px 9px no-repeat;
-    background-image: url("./assets/search.svg");
-    border: 1px solid #68a1f3; }
-  input#keycode {
-    padding-left: 0.5rem;
-    margin-top: 0.5rem;
-    border-radius: 3px;
-    margin-left: 0.6rem;
-    width: 3rem;
-    border: solid 1px #dadada;
-    height: 1.8rem;
-    font-weight: 500; }
+  font-weight: 300;
+}
+
+input:focus {
+  transition: all 0.2s ease;
+}
+
+input#search {
+  border-radius: 100px;
+  background: white 10px 9px no-repeat;
+  background-image: url("./assets/search.svg");
+  border: 1px solid #68a1f3;
+}
+
+input#keycode {
+  padding-left: 0.5rem;
+  margin-top: 0.5rem;
+  border-radius: 3px;
+  margin-left: 0.6rem;
+  width: 3rem;
+  border: solid 1px #dadada;
+  height: 1.8rem;
+  font-weight: 500;
+}
 
 .select_style {
   background: white;
@@ -83,7 +115,8 @@ input {
   border: solid 1px #dadada;
   position: relative;
   cursor: pointer;
-  padding-right: 20px; }
+  padding-right: 20px;
+}
 
 .select_style span {
   position: absolute;
@@ -93,7 +126,8 @@ input {
   background: url("./assets/arrow.png") no-repeat;
   top: 50%;
   margin-top: -4px;
-  background-size: contain; }
+  background-size: contain;
+}
 
 .select_style select {
   -webkit-appearance: none;
@@ -107,108 +141,145 @@ input {
   padding: 7px 10px;
   font-size: 0.7rem;
   text-transform: uppercase;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 ::-webkit-input-placeholder {
   color: #d5d9e4;
-  font-weight: 300; }
+  font-weight: 300;
+}
 
 .show {
-  display: block !important; }
+  display: block !important;
+}
 
 .hide {
-  display: none !important; }
+  display: none !important;
+}
 
 .flexbox {
-  display: flex; }
+  display: flex;
+}
 
 .flexbox--row {
-  flex-direction: row; }
+  flex-direction: row;
+}
 
 .flexbox--column {
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .button {
   font-weight: 300;
   border-radius: 3px;
   border: 1px solid #264f81;
   cursor: default;
-  font-weight: 500; }
-  .button:hover {
-    border-color: #3972b5;
-    transition: border-color 0.3s ease; }
+  font-weight: 500;
+}
+
+.button:hover {
+  border-color: #3972b5;
+  transition: border-color 0.3s ease;
+}
 
 .button--primary {
   border: none;
   background: linear-gradient(45deg, #68a1f3, #5361ca);
-  transition: 10ms; }
-  .button--primary:hover {
-    background: linear-gradient(225deg, #68a1f3, #5361ca); }
+  transition: 10ms;
+}
+
+.button--primary:hover {
+  background: linear-gradient(225deg, #68a1f3, #5361ca);
+}
 
 .button--xs {
   font-size: 0.6rem;
   padding: 3px 10px;
-  line-height: 1rem; }
+  line-height: 1rem;
+}
 
 .button--sm {
   font-size: 0.8rem;
-  padding: 0.4rem 1rem; }
+  padding: 0.4rem 1rem;
+}
 
 .button--quit {
-  position: absolute; }
+  position: absolute;
+}
 
 @keyframes staggering {
   0% {
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
+
 .shortcuts__title {
   font-weight: 700;
   font-size: 0.8rem;
   margin: 1.8rem 0 0.3rem 0;
-  color: #7f8ba0; }
+  color: #7f8ba0;
+}
 
 .shortcut {
   display: flex;
   font-size: 0.8rem;
   position: relative;
-  line-height: 1.4; }
-  .shortcut > * {
-    flex: 1;
-    padding: 0.4rem 0; }
-  .shortcut:last-child {
-    border-bottom: none; }
-  .shortcut:after {
-    content: "";
-    display: block;
-    height: 1px;
-    top: 0.9rem;
-    background-color: #112e40;
-    width: 100%;
-    position: absolute;
-    z-index: -1; }
+  line-height: 1.4;
+}
+
+.shortcut > * {
+  flex: 1;
+  padding: 0.4rem 0;
+}
+
+.shortcut:last-child {
+  border-bottom: none;
+}
+
+.shortcut:after {
+  content: "";
+  display: block;
+  height: 1px;
+  top: 0.9rem;
+  background-color: #112e40;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
 
 .shortcut__key {
-  position: relative; }
-  .shortcut__key span {
-    padding-right: 0.5rem;
-    background-color: #0f2533;
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: clone; }
+  position: relative;
+}
+
+.shortcut__key span {
+  padding-right: 0.5rem;
+  background-color: #0f2533;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
 
 .shortcut__name {
   color: #68a1f3;
-  text-align: right; }
-  .shortcut__name span {
-    padding-left: 0.5rem;
-    background-color: #0f2533;
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: clone; }
-  .shortcut__name:hover {
-    color: #6090fa; }
+  text-align: right;
+}
+
+.shortcut__name span {
+  padding-left: 0.5rem;
+  background-color: #0f2533;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+
+.shortcut__name:hover {
+  color: #6090fa;
+}
 
 .shortcuts__group {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+}
 
 .no-shortcuts {
   text-align: center;
@@ -219,23 +290,30 @@ input {
   padding-top: 20%;
   display: flex;
   flex-direction: column;
-  height: 90vh; }
-  .no-shortcuts .app-name {
-    color: white; }
+  height: 90vh;
+}
+
+.no-shortcuts .app-name {
+  color: white;
+}
 
 .no-shortcuts__text {
   flex-grow: 1;
   display: flex;
-  margin-top: -3rem; }
-  .no-shortcuts__text p {
-    margin: auto; }
+  margin-top: -3rem;
+}
+
+.no-shortcuts__text p {
+  margin: auto;
+}
 
 .app-name {
   font-size: 1.4rem;
   font-weight: 600;
   text-align: center;
   margin: 0;
-  padding-top: 2.5rem; }
+  padding-top: 2.5rem;
+}
 
 .add-shortcut-btn {
   margin: auto;
@@ -244,7 +322,8 @@ input {
   background-color: #68a1f3;
   border-radius: 3px;
   font-size: 0.7rem;
-  color: white; }
+  color: white;
+}
 
 .user-settings {
   display: none;
@@ -254,60 +333,93 @@ input {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1; }
-  .user-settings ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 0 auto;
-    padding: 2rem; }
-  .user-settings li {
-    margin-bottom: 0.5rem; }
-  .user-settings label {
-    flex-grow: 1;
-    font-size: 0.8rem; }
-  .user-settings .select__group {
-    align-items: flex-end; }
-  .user-settings .user-settins-buttons {
-    margin-left: 2rem;
-    position: fixed;
-    bottom: 2rem; }
-    .user-settings .user-settins-buttons .button:last-of-type {
-      right: 2rem;
-      position: fixed; }
+  z-index: 1;
+}
+
+.user-settings ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+.user-settings li {
+  margin-bottom: 0.5rem;
+}
+
+.user-settings label {
+  flex-grow: 1;
+  font-size: 0.8rem;
+}
+
+.user-settings .select__group {
+  align-items: flex-end;
+}
+
+.user-settings .user-settins-buttons {
+  margin-left: 2rem;
+  position: fixed;
+  bottom: 2rem;
+}
+
+.user-settings .user-settins-buttons .button:last-of-type {
+  right: 2rem;
+  position: fixed;
+}
 
 .mode {
   margin-top: -0.3rem;
-  cursor: pointer; }
-  .mode #moon {
-    stroke: #68a1f3; }
-  .mode.active #moon {
-    fill: #68a1f3; }
+  cursor: pointer;
+}
+
+.mode #moon {
+  stroke: #68a1f3;
+}
+
+.mode.active #moon {
+  fill: #68a1f3;
+}
 
 #show-all-apps {
-  position: absolute; }
-  #show-all-apps:hover {
-    cursor: default; }
-    #show-all-apps:hover rect {
-      animation: staggering 0.7s forwards ease; }
-    #show-all-apps:hover #rec-topright {
-      opacity: 0;
-      animation-delay: 200ms; }
-    #show-all-apps:hover #rec-bottomleft {
-      opacity: 0;
-      animation-delay: 200ms; }
-    #show-all-apps:hover #rec-topleft {
-      opacity: 0;
-      animation-delay: 300ms; }
+  position: absolute;
+}
+
+#show-all-apps:hover {
+  cursor: default;
+}
+
+#show-all-apps:hover rect {
+  animation: staggering 0.7s forwards ease;
+}
+
+#show-all-apps:hover #rec-topright {
+  opacity: 0;
+  animation-delay: 200ms;
+}
+
+#show-all-apps:hover #rec-bottomleft {
+  opacity: 0;
+  animation-delay: 200ms;
+}
+
+#show-all-apps:hover #rec-topleft {
+  opacity: 0;
+  animation-delay: 300ms;
+}
 
 #quit-app {
-  right: 1.5rem; }
+  right: 1.5rem;
+}
 
 #setting-app {
   left: 3.4rem;
   margin-top: 2px;
-  position: absolute; }
-  #setting-app:hover #sliders {
-    stroke: #68a6f1;
-    transition: 0.1s ease-in-out; }
+  position: absolute;
+}
+
+#setting-app:hover #sliders {
+  stroke: #68a6f1;
+  transition: 0.1s ease-in-out;
+}
 
 /*# sourceMappingURL=main.css.map */
